<resources>
    <string name="app_name">todolist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="subject">Subject</string>
    <string name="entere_the_task">Entere the Task</string>
    <string name="title">Title</string>
    <string name="enter_the_note_title">Enter the Note title</string>
</resources>
