<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addactivity"
    android:background="#65E4A6">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="#F6F0F0"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/enter_the_note_title" />

        <EditText
            android:id="@+id/sendtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="@string/title"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/entere_the_task" />

        <EditText
            android:id="@+id/sendsubject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="@string/subject"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="LabelFor" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/save"
            android:id="@+id/senddtn"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>